# Course

./: .gitmodules
ColoringProblem/: ColoringProblem.sln  ColoringProblem.vcxproj  ColoringProblem.vcxproj.filters
Dynamic Programming/Fibornacci/src/: Fibornacci.cpp  Fibornacci.h  main.cpp
Dynamic Programming/KnapSack/: knapsack.cpp  knapsack.h  main.cpp
FastInverseSquareroot/src/: fastInverseSquareRoot.h
HashTables/src/: HashTables.cpp  HashTables.h  main.cpp
Knight's_Tour/: Knight's_Tour.sln  Knight's_Tour.vcxproj  Knight's_Tour.vcxproj.filters
Knight's_Tour/src/: KnightsTour.cpp  main.cpp
N-Queens/: .gitignore
N-Queens/N-Queens/: N-Queens.sln  N-Queens.vcxproj  N-Queens.vcxproj.filters
N-Queens/N-Queens/Debug/: N-Queens.exe.recipe  N-Queens.ilk  N-Queens.vcxproj.FileListAbsolute.txt  vc142.idb
N-Queens/N-Queens/Debug/N-Queens.tlog/: CL.command.1.tlog  (+6 more)
N-Queens/N-Queens/src/: nQueens.cpp
N-Queens/src/: main.cpp
Searching Algorithm/Knuth-Morris-Pratt_Algorithm/: .gitignore  CMakeLists.txt
Searching Algorithm/Knuth-Morris-Pratt_Algorithm/src/: Knuth-Morris-Pratt_Algorithm.cpp
Searching Algorithm/SubstringSearch/: .gitignore
Searching Algorithm/SubstringSearch/src/: SubstringSearch.cpp
Searching Algorithm/Z_Algorthim/: .gitignore
Searching Algorithm/Z_Algorthim/src/: main.cpp
Shortest Path Problem/Dijkstra's Algorithm/src/: DijkstraAlgorithm.cpp  DijkstraAlgorithm.h  Edge.cpp  Edge.h  Vertex.cpp  Vertex.h  main.cpp
Sorting Algorithm/BOGO_Sort/BOGOSort/: .gitignore
Sorting Algorithm/Counting_Sort/: .gitignore  countingsort.cpp
(+1 files in other folders)
