# CMakeList.txt : CMake project for Knuth-Morris-Pratt_Algorithm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Knuth-Morris-Pratt_Algorithm")

# Add source to this project's executable.
add_executable (Knuth-Morris-Pratt_Algorithm "src/Knuth-Morris-Pratt_Algorithm.cpp" )

# TODO: Add tests and install targets if needed.
